--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.2.2 - 2018/12/28
+
+- Add basic configuration handling
+- Add COUNT command, prefix command, return the number of keys matching a given prefix
+
+
 0.2.0 - 2018/12/27
 ==================
 
