--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+0.3.2 - 2018/12/31
+==================
+
+- Add prefix command handling to PUT, but sanitizers report an issue
+  bad-malloc_usable_size
+- Add vector structure, for further improvements on lookup-heavy parts of the
+  program
+
+
 0.3.1 - 2018/12/30
 ==================
 
