--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+0.3.3 - 2018/12/01
+==================
+
+- Fixed bad-malloc_usable_size issue and re-implemented memory tracking
+- Fixed size of the trie update on prefix delete operation
+
+
 0.3.2 - 2018/12/31
 ==================
 
