--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,16 @@
-0.3.4 - 2018/12/02
+0.3.5 - 2019/01/06
+==================
+
+- Client connections are now stored in a hashtable instead of a linked list
+
+
+0.3.4 - 2019/01/02
 ==================
 
 - Add KEYS command, a naive implementation
 
 
-0.3.3 - 2018/12/01
+0.3.3 - 2019/01/01
 ==================
 
 - Fixed bad-malloc_usable_size issue and re-implemented memory tracking
