--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.3.6 - 2019/01/07
+==================
+
+- Add max_memory and mem_reclaim_time options on configuration, still to be implemented.
+
+
 0.3.5 - 2019/01/06
 ==================
 
