--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+0.4.3 - 2019/01/14
+==================
+
+- Add basic database abstraction, for now it only gives a level of namespacing
+  to ease the management of key storing.
+
+
 0.4.2 - 2019/01/13
 ==================
 
@@ -6,6 +13,7 @@
   a stream of PUT commands into a single request
 - Add tcp backlog to configuration, if the value exceed
   /proc/sys/net/core/somaxconn, it will be clipped to that value.
+
 
 0.3.6 - 2019/01/07
 ==================
