--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.4.9 - 2019/01/24
+==================
+
+- First almost working cluster implementation, lot of corner case to be handled
+
+
 0.4.7 - 2019/01/20
 ==================
 
