--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+0.5.0 - 2019/01/25
+==================
+
+- Fixed bugs in cluster formation
+- Add naive virtual nodes implementation to distribute load between nodes more
+  evenly
+
+
 0.4.9 - 2019/01/24
 ==================
 
