--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+0.5.1 - 2019/02/03
+==================
+
+- Add initial support for databases which uses hashtable as under the hood
+  data structure
+- Refactored some functions on server
+
 0.5.0 - 2019/01/25
 ==================
 
