--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.6.4 - 2019/05/25
+=================
+
+- Refactored pack module, following Beej's guidelines
+- Add destructor support for trie datastructure
+
 0.6.1 - 2019/05/19
 ==================
 
